update maven configuration

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,8 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <finalName>garden_simulator_3000-1.0</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
                             <mainClass>garden.Main</mainClass>
